The spaghetti is fresh